frontend lobby and category page + backend
