# server/service/Abstractions/IQuizService.cs
@@ -1,0 +1,9 @@
+﻿using DataAccess.Entities;
+using service.Models.Responses;
+
+namespace service.Abstractions;
+
+public interface IQuizService
+{
+    Task<List<BaseQuizResponse>> GetQuizzes(); 
+}
